force-app/main/default/objects/Project_Assignment__c/Project_Assignment__c.object-meta.xml
<CustomObject>
    <label>Project Assignment</label>
    <nameField>
        <displayFormat>PROJECT ASSIGNMENT-{0000}</displayFormat>
        <label>Project Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>