force-app/main/default/objects/Project_Assignment__c/fields/Contact_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contact_Manager__c</fullName>
    <formula>Project_Name__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Manager</label>
    <type>Text</type>
</CustomField>