force-app/main/default/objects/Project_Assignment__c/fields/No_of_Employees_Assigned__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees_Assigned__c</fullName>
    <formula>100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Employees Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>